Fixed social network brand's colors.

--- a/html/profile.html
+++ b/html/profile.html
@@ -58,11 +58,12 @@
             </div>
             <p class="full-name">Daniyil Vasylenko</p>
             <ul class="links">
-              <li class="link"><a href="#"><i class="fa fa-facebook-square fa-2x"></i></a></li>
-              <li class="link"><a href="#"><i class="fa fa-twitter-square fa-2x"></i></a></li>
-              <li class="link"><a href="#"><i class="fa fa-google-plus-square fa-2x"></i></a></li>
-              <li class="link"><a href="#"><i class="fa fa-github-square fa-2x"></i></a></li>
-              <li class="link"><a href="#"><i class="fa fa-plus-square fa-2x"></i></a></li>
+              <li class="link"><a id="fb" href="#"><i class="fa fa-facebook-square fa-2x"></i></a></li>
+              <li class="link"><a id="twitter" href="#"><i class="fa fa-twitter-square fa-2x"></i></a></li>
+              <li class="link"><a id="google" href="#"><i class="fa fa-google-plus-square fa-2x"></i></a></li>
+              <li class="link"><a id="github" href="#"><i class="fa fa-github-square fa-2x"></i></a></li>
+              <li class="link"><a id="linkedIn" href="#"><i class="fa fa-linkedin-square fa-2x"></i></a></li>
+              <li class="link"><a id="add" href="#"><i class="fa fa-plus-square fa-2x"></i></a></li>
             </ul>
             <div class="rating-container">
               <span>Rating:</span>
@@ -118,18 +119,18 @@
       <div class="bottom">
         <div class="comments">
           <div id="disqus_thread"></div>
-<script type="text/javascript">
-    /* * * CONFIGURATION VARIABLES * * */
-    var disqus_shortname = 'teambaker';
+            <script type="text/javascript">
+                /* * * CONFIGURATION VARIABLES * * */
+                var disqus_shortname = 'teambaker';
 
-    /* * * DON'T EDIT BELOW THIS LINE * * */
-    (function() {
-        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-        dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-    })();
-</script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
+                /* * * DON'T EDIT BELOW THIS LINE * * */
+                (function() {
+                    var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+                    dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+                    (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+                })();
+            </script>
+            <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
           <!--<div class="comment-form">
               <form>
                 <textarea placeholder="Comment text"></textarea>
