--- a/html/profile.html
+++ b/html/profile.html
@@ -46,7 +46,7 @@
 
 
     <div class="page-content">
-      <div class="row top col-xs-12 col-sm-10 col-sm-offset-1">
+      <div class="row top col-xs-12">
         <div class="content">
           <div class="left col-xs-12 col-sm-3">
             <div class="avatar-container">
@@ -72,39 +72,39 @@
             </div>
 
           </div>
-          <div class="mid col-xs-8 col-xs-offset-2 col-sm-offset-1 col-sm-4">
+          <div class="mid col-xs-12 col-sm-4">
 
             <div class="block centered">
               <h4>Basic info</h4>
               <div class="info row">
-                <div class="key col-xs-4">
+                <div class="key col-xs-5">
                   <p>From:</p>
                 </div>
-                <div class="value col-xs-8">
+                <div class="value col-xs-6 col-sm-7">
                   <p> 10 May 2015</p>
                 </div>
               </div>
               <div class="info row">
-                <div class="key col-xs-4">
+                <div class="key col-xs-5">
                   <p>Email:</p>
                 </div>
-                <div class="value col-xs-8">
+                <div class="value col-xs-6 col-sm-7">
                   <p> jdoe@gmail.com</p>
                 </div>
               </div>
               <div class="info row">
-                <div class="key col-xs-4">
+                <div class="key col-xs-5">
                   <p>Country:</p>
                 </div>
-                <div class="value col-xs-8">
+                <div class="value col-xs-6 col-sm-7">
                   <p> Great Britain</p>
                 </div>
               </div>
               <div class="info row">
-                <div class="key col-xs-4">
+                <div class="key col-xs-5">
                   <p>Age:</p>
                 </div>
-                <div class="value col-xs-8">
+                <div class="value col-xs-6 col-sm-7">
                   <p> 23</p>
                 </div>
               </div>
@@ -156,7 +156,7 @@
               <!--</div>-->
             <!--</div>-->
           </div>
-          <div class="right col-sm-4">
+          <div class="right col-xs-12 col-sm-5">
             <h4 class="centered">Notifications</h4>
             <div class="panel panel-hashtag col-xs-12 col-sm-12 col-lg-4 col-lg-offset-1">
               <div class="panel-heading">
@@ -174,7 +174,7 @@
             </div>
           </div>
           <div class="clear"></div>
-          <section class="showoff-section col-xs-12 col-sm-6 col-sm-offset-3">
+          <section class="showoff-section col-xs-12 col-sm-8 col-sm-offset-2">
             <div class="block centered">
               <h4>Projects</h4>
               <ul class="projects">
@@ -208,7 +208,7 @@
               </ul>
             </div>
           </section>
-          <section class="comments-section col-xs-12 col-sm-6 col-sm-offset-3">
+          <section class="comments-section col-xs-12 col-sm-8 col-sm-offset-2">
             <div id="disqus_thread"></div>
               <script type="text/javascript">
                   /* * * CONFIGURATION VARIABLES * * */
