--- a/html/search.html
+++ b/html/search.html
@@ -155,12 +155,12 @@
     <!-- Auth end -->
 
     <div class="row content-wrapper">
-      <div class="menu-section col-xs-12 col-sm-5 col-md-4 col-lg-2">
+      <aside class="menu-section col-xs-12 col-sm-5 col-md-4 col-lg-2">
         <ul class="menu">
           <li class="menu-item menu-item-header">Search items</li>
-          <li class="menu-item"><a href="#projects">Projects</a></li>
-          <li class="menu-item"><a href="#people">People</a></li>
-          <li class="menu-item"><a href="#hashtags">Hashtags</a></li>
+          <li class="menu-item"><a class="underlined" href="#projects">Projects</a></li>
+          <li class="menu-item"><a class="underlined" href="#people">People</a></li>
+          <li class="menu-item"><a class="underlined" href="#hashtags">Hashtags</a></li>
           <li class="menu-item paddinged">
             Sort by:
             <select>
@@ -170,8 +170,8 @@
             </select>
           </li>
         </ul>
-      </div>
-      <div class="result-section col-xs-12 col-sm-7 col-md-8 col-lg-10">
+      </aside>
+      <section class="result-section col-xs-12 col-sm-7 col-md-8 col-lg-10">
         <div class="menu-top">
           <div class="list-group">
             <div class="form-group search-group">
@@ -470,7 +470,7 @@
           <div class="btn-load">
             <a href="#" class="button line-green square large">Load more <i class="fa fa-arrow-down"></i></a>
           </div>
-      </div>
+      </section>
 
     </div>
 
