Fixed layout on profile page.

--- a/html/profile.html
+++ b/html/profile.html
@@ -71,46 +71,35 @@
             </div>
 
           </div>
-          <div class="mid col-xs-12 col-sm-4">
+          <div class="mid col-xs-8 col-xs-offset-2 col-sm-offset-0 col-sm-4">
 
             <div class="block centered">
               <h4>Basic info</h4>
-              <div class="info row">
-                <div class="key col-xs-5">
-                  <p>From:</p>
+              <div class="wrapper">
+                <div class="info">
+                    <p class="key">From:</p>
+                    <p class="value">10 May 2015</p>
                 </div>
-                <div class="value col-xs-6 col-sm-7">
-                  <p> 10 May 2015</p>
+                <div class="clear"></div>
+                <div class="info">
+                    <p class="key">Email:</p>
+                    <p class="value">jdoe@gmail.com</p>
                 </div>
-              </div>
-              <div class="info row">
-                <div class="key col-xs-5">
-                  <p>Email:</p>
+                <div class="clear"></div>
+                <div class="info">
+                    <p class="key">Country:</p>
+                    <p class="value">Great Britain</p>
                 </div>
-                <div class="value col-xs-6 col-sm-7">
-                  <p> jdoe@gmail.com</p>
-                </div>
-              </div>
-              <div class="info row">
-                <div class="key col-xs-5">
-                  <p>Country:</p>
-                </div>
-                <div class="value col-xs-6 col-sm-7">
-                  <p> Great Britain</p>
-                </div>
-              </div>
-              <div class="info row">
-                <div class="key col-xs-5">
-                  <p>Age:</p>
-                </div>
-                <div class="value col-xs-6 col-sm-7">
-                  <p> 23</p>
+                <div class="clear"></div>
+                <div class="info">
+                    <p class="key">Age:</p>
+                    <p class="value">23</p>
                 </div>
               </div>
             </div>
-
-            <div class="block centered">
-              <h4>Skills</h4>
+            <div class="clear"></div>
+            <div class="block">
+              <h4 class="centered">Skills</h4>
               <ul class="skills">
                 <li><a href="#">Programming</a></li>
                 <li><a href="#">English</a></li>
