--- a/html/profile.html
+++ b/html/profile.html
@@ -45,7 +45,7 @@
     </nav>
 
     <div class="page-content">
-      <div class="row top col-xs-12">
+      <div class="top col-xs-12">
         <div class="content">
           <div class="left col-xs-12 col-sm-3">
             <div class="avatar-container">
@@ -132,14 +132,18 @@
               <ul class="projects">
                 <li>
                   <div class="project">
-                    <p class="name">Project #1</p>
-                    <p class="status">Status: active</p>
+                    <a href="../html/project.html">
+                      <img src="../img/proj_img-3.jpg"></img>
+                      <p class="name">Project #1</p>
+                    </a>
                   </div>
                 </li>
                 <li>
                   <div class="project">
-                    <p class="name">Project #2</p>
-                    <p class="status">Status: complete</p>
+                    <a href="../html/project.html">
+                      <img src="../img/proj_img-3.jpg"></img>
+                      <p class="name">Project #2</p>
+                    </a>
                   </div>
                 </li>
               </ul>
@@ -148,13 +152,14 @@
               <h4>Portfolio</h4>
               <ul class="portfolio">
                 <li>
-                  <div clas="portfolio-item">
-                    <p class="name">Name</p>
-                    <p class="aim">Aim</p>
-                    <p class="role">Role</p>
-                    <p class="skills">Skills</p>
-                    <p class="exp">Experience</p>
-                    <p class="link"><a href="#">Link</a></p>
+                  <div class="portfolio-item">
+                    <img src="../img/proj_img-3.jpg"></img>
+                    <p class="name">TeamBaker</p>
+                    <p class="role">Role: CEO, developer</p>
+                    <p class="skills">Skills: Scss, Bootstrap, CSS, HTML, JS</p>
+                    <p class="exp">Exp: 2 months</p>
+                    <p class="aim">Aim: Make it easier for people to find themselves a project.</p>
+                    <p class="link"><a href="../index.html">Link</a></p>
                   </div>
                 </li>
               </ul>
