Made the panels look more fancy.

--- a/html/search.html
+++ b/html/search.html
@@ -200,16 +200,16 @@
                   <p>by <a href="profile.html" class="author">John Doe</a></p>
                   <ul class="project_hashtags">
                     <li class="hashtag">
-                      <a href="search.html"><span class="label label-success">#Art</span></a>
+                      <a href="search.html"><span class="label label-success">Art</span></a>
                     </li>
                     <li class="hashtag">
-                      <a href="search.html"><span class="label label-success">#Photoshop</span></a>
+                      <a href="search.html"><span class="label label-success">Photoshop</span></a>
                     </li>
                     <li class="hashtag">
-                      <a href="search.html"><span class="label label-success">#Illustrator</span></a>
+                      <a href="search.html"><span class="label label-success">Illustrator</span></a>
                     </li>
                     <li class="hashtag">
-                      <a href="search.html"><span class="label label-success">#Lightroom</span></a>
+                      <a href="search.html"><span class="label label-success">Lightroom</span></a>
                     </li>
                   </ul>
                   <ul class="project-params">
@@ -242,13 +242,13 @@
                   <p class="author-email">johnDoe@gmail.com</p>
                     <ul class="project_hashtags">
                       <li class="hashtag">
-                        <a href="search.html"><span class="label label-success">#CSS3</span></a>
+                        <a href="search.html"><span class="label label-success">CSS3</span></a>
                       </li>
                       <li class="hashtag">
-                        <a href="search.html"><span class="label label-success">#HTML5</span></a>
+                        <a href="search.html"><span class="label label-success">HTML5</span></a>
                       </li>
                       <li class="hashtag">
-                        <a href="search.html"><span class="label label-success">#JS</span></a>
+                        <a href="search.html"><span class="label label-success">JS</span></a>
                       </li>
                     </ul>
                   <ul class="project-params">
@@ -278,16 +278,16 @@
                   <p>by <a href="profile.html" class="author">John Doe</a></p>
                   <ul class="project_hashtags">
                     <li class="hashtag">
-                      <a href="search.html"><span class="label label-success">#Art</span></a>
+                      <a href="search.html"><span class="label label-success">Art</span></a>
                     </li>
                     <li class="hashtag">
-                      <a href="search.html"><span class="label label-success">#Photoshop</span></a>
+                      <a href="search.html"><span class="label label-success">Photoshop</span></a>
                     </li>
                     <li class="hashtag">
-                      <a href="search.html"><span class="label label-success">#Illustrator</span></a>
+                      <a href="search.html"><span class="label label-success">Illustrator</span></a>
                     </li>
                     <li class="hashtag">
-                      <a href="search.html"><span class="label label-success">#Lightroom</span></a>
+                      <a href="search.html"><span class="label label-success">Lightroom</span></a>
                     </li>
                   </ul>
                   <ul class="project-params">
@@ -312,7 +312,7 @@
             </div>
             <div class="panel panel-hashtag col-xs-12 col-sm-12 col-md-6 col-lg-4 col-lg-offset-1">
               <div class="panel-heading">
-                <h3 class="panel-title"><a href="search.html?what=tag&is=Java">#Java</a></h3>
+                <h3 class="panel-title"><a href="search.html?what=tag&is=Java">Java</a></h3>
               </div>
               <div class="panel-body">
                 <div class="info-container">
@@ -339,16 +339,16 @@
                   <p>by <a href="profile.html" class="author">John Doe</a></p>
                   <ul class="project_hashtags">
                     <li class="hashtag">
-                      <a href="search.html"><span class="label label-success">#Art</span></a>
+                      <a href="search.html"><span class="label label-success">Art</span></a>
                     </li>
                     <li class="hashtag">
-                      <a href="search.html"><span class="label label-success">#Photoshop</span></a>
+                      <a href="search.html"><span class="label label-success">Photoshop</span></a>
                     </li>
                     <li class="hashtag">
-                      <a href="search.html"><span class="label label-success">#Illustrator</span></a>
+                      <a href="search.html"><span class="label label-success">Illustrator</span></a>
                     </li>
                     <li class="hashtag">
-                      <a href="search.html"><span class="label label-success">#Lightroom</span></a>
+                      <a href="search.html"><span class="label label-success">Lightroom</span></a>
                     </li>
                   </ul>
                   <ul class="project-params">
@@ -381,13 +381,13 @@
                   <p class="author-email">johnDoe@gmail.com</p>
                     <ul class="project_hashtags">
                       <li class="hashtag">
-                        <a href="search.html"><span class="label label-success">#CSS3</span></a>
+                        <a href="search.html"><span class="label label-success">CSS3</span></a>
                       </li>
                       <li class="hashtag">
-                        <a href="search.html"><span class="label label-success">#HTML5</span></a>
+                        <a href="search.html"><span class="label label-success">HTML5</span></a>
                       </li>
                       <li class="hashtag">
-                        <a href="search.html"><span class="label label-success">#JS</span></a>
+                        <a href="search.html"><span class="label label-success">JS</span></a>
                       </li>
                     </ul>
                   <ul class="project-params">
@@ -407,7 +407,7 @@
             </div>
             <div class="panel panel-hashtag col-xs-12 col-sm-12 col-md-6 col-lg-4 col-lg-offset-1">
               <div class="panel-heading">
-                <h3 class="panel-title"><a href="search.html?what=tag&is=Java">#Java</a></h3>
+                <h3 class="panel-title"><a href="search.html?what=tag&is=Java">Java</a></h3>
               </div>
               <div class="panel-body">
                 <div class="info-container">
@@ -434,16 +434,16 @@
                   <p>by <a href="profile.html" class="author">John Doe</a></p>
                   <ul class="project_hashtags">
                     <li class="hashtag">
-                      <a href="search.html"><span class="label label-success">#Art</span></a>
+                      <a href="search.html"><span class="label label-success">Art</span></a>
                     </li>
                     <li class="hashtag">
-                      <a href="search.html"><span class="label label-success">#Photoshop</span></a>
+                      <a href="search.html"><span class="label label-success">Photoshop</span></a>
                     </li>
                     <li class="hashtag">
-                      <a href="search.html"><span class="label label-success">#Illustrator</span></a>
+                      <a href="search.html"><span class="label label-success">Illustrator</span></a>
                     </li>
                     <li class="hashtag">
-                      <a href="search.html"><span class="label label-success">#Lightroom</span></a>
+                      <a href="search.html"><span class="label label-success">Lightroom</span></a>
                     </li>
                   </ul>
                   <ul class="project-params">
