--- a/index.html
+++ b/index.html
@@ -392,16 +392,16 @@
 
             <ul class="project_hashtags">
               <li class="hashtag">
-                <a href="html/search.html"><span class="label label-success">#Art</span></a>
+                <a href="html/search.html"><span class="label label-success">Art</span></a>
               </li>
               <li class="hashtag">
-                <a href="html/search.html"><span class="label label-success">#Photoshop</span></a>
+                <a href="html/search.html"><span class="label label-success">Photoshop</span></a>
               </li>
               <li class="hashtag">
-                <a href="html/search.html"><span class="label label-success">#Illustrator</span></a>
+                <a href="html/search.html"><span class="label label-success">Illustrator</span></a>
               </li>
               <li class="hashtag">
-                <a href="html/search.html"><span class="label label-success">#Lightroom</span></a>
+                <a href="html/search.html"><span class="label label-success">Lightroom</span></a>
               </li>
             </ul>
             <ul class="project-params">
@@ -438,16 +438,16 @@
 
             <ul class="project_hashtags">
               <li class="hashtag">
-                <a href="html/search.html"><span class="label label-success">#Art</span></a>
+                <a href="html/search.html"><span class="label label-success">Art</span></a>
               </li>
               <li class="hashtag">
-                <a href="html/search.html"><span class="label label-success">#Photoshop</span></a>
+                <a href="html/search.html"><span class="label label-success">Photoshop</span></a>
               </li>
               <li class="hashtag">
-                <a href="html/search.html"><span class="label label-success">#Illustrator</span></a>
+                <a href="html/search.html"><span class="label label-success">Illustrator</span></a>
               </li>
               <li class="hashtag">
-                <a href="html/search.html"><span class="label label-success">#Lightroom</span></a>
+                <a href="html/search.html"><span class="label label-success">Lightroom</span></a>
               </li>
             </ul>
             <ul class="project-params">
@@ -484,16 +484,16 @@
 
             <ul class="project_hashtags">
               <li class="hashtag">
-                <a href="html/search.html"><span class="label label-success">#Art</span></a>
+                <a href="html/search.html"><span class="label label-success">Art</span></a>
               </li>
               <li class="hashtag">
-                <a href="html/search.html"><span class="label label-success">#Photoshop</span></a>
+                <a href="html/search.html"><span class="label label-success">Photoshop</span></a>
               </li>
               <li class="hashtag">
-                <a href="html/search.html"><span class="label label-success">#Illustrator</span></a>
+                <a href="html/search.html"><span class="label label-success">Illustrator</span></a>
               </li>
               <li class="hashtag">
-                <a href="html/search.html"><span class="label label-success">#Lightroom</span></a>
+                <a href="html/search.html"><span class="label label-success">Lightroom</span></a>
               </li>
             </ul>
             <ul class="project-params">
@@ -530,16 +530,16 @@
 
             <ul class="project_hashtags">
               <li class="hashtag">
-                <a href="html/search.html"><span class="label label-success">#Art</span></a>
+                <a href="html/search.html"><span class="label label-success">Art</span></a>
               </li>
               <li class="hashtag">
-                <a href="html/search.html"><span class="label label-success">#Photoshop</span></a>
+                <a href="html/search.html"><span class="label label-success">Photoshop</span></a>
               </li>
               <li class="hashtag">
-                <a href="html/search.html"><span class="label label-success">#Illustrator</span></a>
+                <a href="html/search.html"><span class="label label-success">Illustrator</span></a>
               </li>
               <li class="hashtag">
-                <a href="html/search.html"><span class="label label-success">#Lightroom</span></a>
+                <a href="html/search.html"><span class="label label-success">Lightroom</span></a>
               </li>
             </ul>
             <ul class="project-params">
@@ -576,16 +576,16 @@
 
             <ul class="project_hashtags">
               <li class="hashtag">
-                <a href="html/search.html"><span class="label label-success">#Art</span></a>
+                <a href="html/search.html"><span class="label label-success">Art</span></a>
               </li>
               <li class="hashtag">
-                <a href="html/search.html"><span class="label label-success">#Photoshop</span></a>
+                <a href="html/search.html"><span class="label label-success">Photoshop</span></a>
               </li>
               <li class="hashtag">
-                <a href="html/search.html"><span class="label label-success">#Illustrator</span></a>
+                <a href="html/search.html"><span class="label label-success">Illustrator</span></a>
               </li>
               <li class="hashtag">
-                <a href="html/search.html"><span class="label label-success">#Lightroom</span></a>
+                <a href="html/search.html"><span class="label label-success">Lightroom</span></a>
               </li>
             </ul>
             <ul class="project-params">
@@ -622,16 +622,16 @@
 
             <ul class="project_hashtags">
               <li class="hashtag">
-                <a href="html/search.html"><span class="label label-success">#Art</span></a>
+                <a href="html/search.html"><span class="label label-success">Art</span></a>
               </li>
               <li class="hashtag">
-                <a href="html/search.html"><span class="label label-success">#Photoshop</span></a>
+                <a href="html/search.html"><span class="label label-success">Photoshop</span></a>
               </li>
               <li class="hashtag">
-                <a href="html/search.html"><span class="label label-success">#Illustrator</span></a>
+                <a href="html/search.html"><span class="label label-success">Illustrator</span></a>
               </li>
               <li class="hashtag">
-                <a href="html/search.html"><span class="label label-success">#Lightroom</span></a>
+                <a href="html/search.html"><span class="label label-success">Lightroom</span></a>
               </li>
             </ul>
             <ul class="project-params">
