--- a/index.html
+++ b/index.html
@@ -289,11 +289,11 @@
     <div class="panels">
       <div class="panel panel-art col-sm-12 col-md-6 col-lg-4 col-lg-offset-1">
         <div class="panel-heading">
-          <h3 class="panel-title"><a href="html/project.html">Sample art panel</a></h3>
+          <h3 class="panel-title"><a href="html/project.html">Bicycle speed meter</a></h3>
         </div>
         <div class="panel-body">
           <div class="image-container">
-            <a href="html/project.html"><img src="img/proj_img-1.jpg"></img></a>
+            <a href="html/project.html"><img src="img/bicycle.gif"></img></a>
           </div>
           <div class="info-container">
             <p>by <a href="html/profile.html" class="author">John Doe</a></p>
@@ -335,11 +335,11 @@
 
       <div class="panel panel-art col-sm-12 col-md-6 col-lg-4 col-lg-offset-1">
         <div class="panel-heading">
-          <h3 class="panel-title"><a href="html/project.html">Sample art panel</a></h3>
+          <h3 class="panel-title"><a href="html/project.html">Messanger</a></h3>
         </div>
         <div class="panel-body">
           <div class="image-container">
-            <a href="html/project.html"><img src="img/proj_img-1.jpg"></img></a>
+            <a href="html/project.html"><img src="img/rocket.gif"></img></a>
           </div>
           <div class="info-container">
             <p>by <a href="html/profile.html" class="author">John Doe</a></p>
@@ -381,11 +381,11 @@
 
       <div class="panel panel-art col-sm-12 col-md-6 col-lg-4 col-lg-offset-1">
         <div class="panel-heading">
-          <h3 class="panel-title"><a href="html/project.html">Sample art panel</a></h3>
+          <h3 class="panel-title"><a href="html/project.html">Photo bank</a></h3>
         </div>
         <div class="panel-body">
           <div class="image-container">
-            <a href="html/project.html"><img src="img/proj_img-1.jpg"></img></a>
+            <a href="html/project.html"><img src="img/camera.gif"></img></a>
           </div>
           <div class="info-container">
             <p>by <a href="html/profile.html" class="author">John Doe</a></p>
