Various image sizes test.

--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
 
       <div class="panel panel-art col-sm-12 col-md-6 col-lg-4 col-lg-offset-1">
         <div class="panel-heading">
-          <h3 class="panel-title"><a href="html/project.html">Messanger</a></h3>
+          <h3 class="panel-title"><a href="html/project.html">Messenger</a></h3>
         </div>
         <div class="panel-body">
           <div class="image-container">
@@ -431,7 +431,7 @@
         </div>
         <div class="panel-body">
           <div class="image-container">
-            <a href="html/project.html"><img src="img/proj_img-1.jpg"></img></a>
+            <a href="html/project.html"><img src="img/author-m.jpg"></img></a>
           </div>
           <div class="info-container">
             <p>by <a href="html/profile.html" class="author">John Doe</a></p>
@@ -477,7 +477,7 @@
         </div>
         <div class="panel-body">
           <div class="image-container">
-            <a href="html/project.html"><img src="img/proj_img-1.jpg"></img></a>
+            <a href="html/project.html"><img src="img/proj_img-2.jpg"></img></a>
           </div>
           <div class="info-container">
             <p>by <a href="html/profile.html" class="author">John Doe</a></p>
@@ -523,7 +523,7 @@
         </div>
         <div class="panel-body">
           <div class="image-container">
-            <a href="html/project.html"><img src="img/proj_img-1.jpg"></img></a>
+            <a href="html/project.html"><img src="img/proj_img-3.jpg"></img></a>
           </div>
           <div class="info-container">
             <p>by <a href="html/profile.html" class="author">John Doe</a></p>
@@ -569,7 +569,7 @@
         </div>
         <div class="panel-body">
           <div class="image-container">
-            <a href="html/project.html"><img src="img/proj_img-1.jpg"></img></a>
+            <a href="html/project.html"><img src="img/proj_img-4.jpg"></img></a>
           </div>
           <div class="info-container">
             <p>by <a href="html/profile.html" class="author">John Doe</a></p>
@@ -615,7 +615,7 @@
         </div>
         <div class="panel-body">
           <div class="image-container">
-            <a href="html/project.html"><img src="img/proj_img-1.jpg"></img></a>
+            <a href="html/project.html"><img src="img/author-f.jpg"></img></a>
           </div>
           <div class="info-container">
             <p>by <a href="html/profile.html" class="author">John Doe</a></p>
